# 174-deeponet-finance

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  data_loader.py  model.py  requirements.txt  train.py  visualize.py
rust_deeponet/: Cargo.toml
rust_deeponet/examples/: crypto_forecast.rs  option_pricing.rs  yield_curve.rs
rust_deeponet/src/: lib.rs
